--- a/index.html
+++ b/index.html
@@ -6,122 +6,125 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Trustiva Market</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+
 <style>
+
+/* ================= RESET ================= */
+
 *{
   margin:0;
   padding:0;
   box-sizing:border-box;
 }
 
-html,body{
-  width:100%;
+body{
+  font-family:'Inter',sans-serif;
+  background:#000;
   overflow-x:hidden;
-  background:black;
-  font-family: Arial, Helvetica, sans-serif;
-  color:white;
+  color:#fff;
 }
 
 /* ================= HERO SECTION ================= */
 
 .hero{
   position:relative;
-  width:100%;
   height:100vh;
+  width:100%;
   background:url("space.jpg") center center / cover no-repeat;
   display:flex;
   flex-direction:column;
   align-items:center;
-  overflow:hidden;
 }
 
-/* Dark cinematic overlay */
+/* Dark overlay */
 .hero::after{
   content:"";
   position:absolute;
   inset:0;
-  background:linear-gradient(to bottom, rgba(0,0,0,0.85), rgba(0,0,0,0.4));
-  z-index:1;
+  background:rgba(0,0,0,0.55);
 }
 
 /* ================= LOGO ================= */
 
 .logo{
   position:relative;
-  margin-top:30px;
+  margin-top:40px;
+  font-family:'Orbitron',sans-serif;
   font-size:34px;
-  letter-spacing:14px;
+  letter-spacing:8px;
   z-index:3;
 }
 
 /* ================= NAVIGATION ================= */
 
-.navbar{
+.nav{
   position:relative;
   margin-top:20px;
   display:flex;
-  justify-content:center;
-  gap:45px;
-  font-size:13px;
-  letter-spacing:3px;
+  gap:50px;
   z-index:3;
-  flex-wrap:wrap;
 }
 
-.navbar a{
-  color:white;
+.nav a{
   text-decoration:none;
-  opacity:0.75;
+  color:#ccc;
+  font-size:13px;
+  letter-spacing:2px;
   transition:0.3s;
 }
 
-.navbar a:hover{
-  opacity:1;
+.nav a:hover{
+  color:#fff;
+}
+
+.nav .btn{
+  padding:8px 18px;
+  border:1px solid #fff;
+  border-radius:4px;
 }
 
 /* ================= CENTER CONTENT ================= */
 
-.center-content{
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%, -50%);
-  text-align:center;
+.center{
+  position:relative;
   z-index:3;
-  width:90%;
-  max-width:900px;
+  text-align:center;
+  margin-top:auto;
+  margin-bottom:auto;
+  padding:0 20px;
 }
 
-.small-text{
+.center small{
+  letter-spacing:4px;
   font-size:12px;
-  letter-spacing:5px;
-  opacity:0.6;
-  margin-bottom:20px;
+  opacity:0.7;
 }
 
-.main-title{
-  font-size:52px;
+.center h1{
+  font-size:56px;
   font-weight:300;
-  margin-bottom:20px;
+  margin:20px 0;
 }
 
-.sub-text{
-  font-size:16px;
-  opacity:0.85;
-  margin-bottom:35px;
+.center p{
+  font-size:18px;
+  opacity:0.8;
+  margin-bottom:30px;
 }
 
-.btn{
-  padding:14px 34px;
-  background:white;
-  color:black;
-  text-decoration:none;
-  font-size:13px;
+.center button{
+  padding:14px 32px;
+  background:#fff;
+  color:#000;
+  border:none;
+  font-weight:500;
   letter-spacing:2px;
-  display:inline-block;
+  cursor:pointer;
   transition:0.3s;
 }
 
-.btn:hover{
+.center button:hover{
   background:#ddd;
 }
 
@@ -129,45 +132,46 @@ html,body{
 
 .ship{
   position:absolute;
-  width:450px;
-  z-index:2;
-  opacity:0;
+  width:420px;
   pointer-events:none;
+  z-index:2;
 }
 
-/* LEFT SHIP - diagonal inward */
+/* LEFT SHIP */
 .ship-left{
-  bottom:-250px;
-  left:-350px;
+  bottom:120px;
+  left:-500px;
+  transform:rotate(20deg);
   animation:leftEnter 2.5s ease-out forwards;
 }
 
-/* RIGHT SHIP - diagonal inward */
+/* RIGHT SHIP */
 .ship-right{
-  bottom:-250px;
-  right:-350px;
+  bottom:120px;
+  right:-500px;
+  transform:rotate(-20deg);
   animation:rightEnter 2.5s ease-out forwards;
 }
 
 @keyframes leftEnter{
   from{
-    transform:translate(-350px, 300px) rotate(25deg);
-    opacity:0;
+    left:-500px;
+    transform:rotate(25deg);
   }
   to{
-    transform:translate(80px, -60px) rotate(10deg);
-    opacity:1;
+    left:80px;
+    transform:rotate(12deg);
   }
 }
 
 @keyframes rightEnter{
   from{
-    transform:translate(350px, 300px) rotate(-25deg);
-    opacity:0;
+    right:-500px;
+    transform:rotate(-25deg);
   }
   to{
-    transform:translate(-80px, -60px) rotate(-10deg);
-    opacity:1;
+    right:80px;
+    transform:rotate(-12deg);
   }
 }
 
@@ -175,36 +179,42 @@ html,body{
 
 @media(max-width:900px){
 
-  .main-title{
-    font-size:32px;
+  .center h1{
+    font-size:36px;
   }
 
   .ship{
-    width:260px;
+    width:220px;
+  }
+
+  .ship-left{
+    bottom:50px;
+    left:-250px;
+  }
+
+  .ship-right{
+    bottom:50px;
+    right:-250px;
   }
 
   @keyframes leftEnter{
-    from{
-      transform:translate(-250px,200px) rotate(25deg);
-      opacity:0;
-    }
-    to{
-      transform:translate(40px,-20px) rotate(10deg);
-      opacity:1;
-    }
+    from{ left:-250px; }
+    to{ left:10px; }
   }
 
   @keyframes rightEnter{
-    from{
-      transform:translate(250px,200px) rotate(-25deg);
-      opacity:0;
-    }
-    to{
-      transform:translate(-40px,-20px) rotate(-10deg);
-      opacity:1;
-    }
+    from{ right:-250px; }
+    to{ right:10px; }
   }
+
+  .nav{
+    flex-wrap:wrap;
+    gap:20px;
+    justify-content:center;
+  }
+
 }
+
 </style>
 </head>
 
@@ -214,57 +224,27 @@ html,body{
 
   <div class="logo">TRUSTIVA</div>
 
-  <div class="navbar">
+  <div class="nav">
     <a href="#">BROWSE</a>
     <a href="#">HOW IT WORKS</a>
     <a href="#">SELLERS</a>
     <a href="#">PRICING</a>
     <a href="#">SIGN IN</a>
-    <a href="#">LIST WEBSITE</a>
+    <a href="#" class="btn">LIST WEBSITE</a>
   </div>
 
-  <div class="center-content">
-    <div class="small-text">ACCESSING DIGITAL MARKETPLACE</div>
-    <div class="main-title" id="scramble">
-      Buy & Sell Digital Businesses
-    </div>
-    <div class="sub-text">
-      AI-powered marketplace for verified revenue-generating online assets.
-    </div>
-    <a href="#" class="btn">BROWSE LISTINGS</a>
+  <div class="center">
+    <small>ACCESSING DIGITAL MARKETPLACE</small>
+    <h1>Buy & Sell Digital Businesses</h1>
+    <p>AI-powered marketplace for verified revenue-generating online assets.</p>
+    <button>BROWSE LISTINGS</button>
   </div>
 
+  <!-- Ships -->
   <img src="ship-left.png" class="ship ship-left">
   <img src="ship-right.png" class="ship ship-right">
 
 </section>
-
-<script>
-/* CLEAN SCRAMBLE EFFECT */
-
-const el = document.getElementById("scramble");
-const originalText = el.textContent;
-const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
-let iteration = 0;
-
-const interval = setInterval(() => {
-  el.textContent = originalText
-    .split("")
-    .map((letter, index) => {
-      if(index < iteration){
-        return originalText[index];
-      }
-      return letters[Math.floor(Math.random()*letters.length)];
-    })
-    .join("");
-
-  if(iteration >= originalText.length){
-    clearInterval(interval);
-  }
-
-  iteration += 0.5;
-}, 30);
-</script>
 
 </body>
 </html>
