--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <style>
 
-/* RESET */
+/* ================= RESET ================= */
 *{
   margin:0;
   padding:0;
@@ -18,41 +18,41 @@
 }
 
 body{
-  font-family:'Inter',sans-serif;
+  font-family:'Inter', sans-serif;
   background:#000;
-  overflow-x:hidden;
   color:#fff;
+  overflow-x:hidden;
 }
 
-/* HERO BACKGROUND */
+/* ================= HERO BACKGROUND ================= */
 .hero{
   position:relative;
-  width:100%;
   height:100vh;
-  background:url('space.jpg') center center/cover no-repeat;
+  width:100%;
+  background:url("space.jpg") center center / cover no-repeat;
   display:flex;
   flex-direction:column;
   align-items:center;
 }
 
-/* DARK OVERLAY */
+/* Dark cinematic overlay */
 .hero::after{
-  content:'';
+  content:"";
   position:absolute;
   inset:0;
   background:linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.85));
 }
 
-/* HEADER */
+/* ================= HEADER ================= */
 .header{
   position:relative;
-  z-index:10;
-  padding-top:30px;
+  z-index:5;
+  padding-top:40px;
   text-align:center;
 }
 
 .logo{
-  font-family:'Orbitron',sans-serif;
+  font-family:'Orbitron', sans-serif;
   font-size:34px;
   letter-spacing:10px;
   margin-bottom:25px;
@@ -76,32 +76,34 @@ body{
   color:#fff;
 }
 
-/* HERO CONTENT */
+/* ================= HERO CONTENT ================= */
 .hero-content{
-  position:relative;
-  z-index:5;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%, -50%);
   text-align:center;
-  margin-top:120px;
+  z-index:5;
+  width:90%;
   max-width:900px;
-  padding:0 20px;
 }
 
 .subheading{
   font-size:13px;
-  letter-spacing:3px;
-  color:#aaa;
+  letter-spacing:4px;
+  opacity:0.7;
   margin-bottom:20px;
 }
 
-.hero-content h1{
-  font-size:48px;
+#hero-title{
+  font-size:56px;
   font-weight:300;
   margin-bottom:20px;
 }
 
-.hero-content p{
-  font-size:16px;
-  color:#ccc;
+.description{
+  font-size:18px;
+  opacity:0.8;
   margin-bottom:35px;
 }
 
@@ -120,65 +122,16 @@ body{
   background:#ddd;
 }
 
-/* SHIPS */
-.ship{
-  position:absolute;
-  bottom:-150px;
-  width:420px;
-  z-index:3;
-  pointer-events:none;
-}
-
-.ship-left{
-  left:-450px;
-  animation:shipLeftMove 3.5s ease-out forwards;
-}
-
-.ship-right{
-  right:-450px;
-  animation:shipRightMove 3.5s ease-out forwards;
-}
-
-@keyframes shipLeftMove{
-  0%{
-    transform:translateX(0) translateY(0) rotate(0deg);
-  }
-  100%{
-    transform:translateX(550px) translateY(-120px) rotate(8deg);
-  }
-}
-
-@keyframes shipRightMove{
-  0%{
-    transform:translateX(0) translateY(0) rotate(0deg);
-  }
-  100%{
-    transform:translateX(-550px) translateY(-120px) rotate(-8deg);
-  }
-}
-
-/* RESPONSIVE */
+/* ================= RESPONSIVE ================= */
 @media(max-width:768px){
 
-  .hero-content h1{
-    font-size:32px;
+  #hero-title{
+    font-size:34px;
   }
 
   .nav{
     flex-wrap:wrap;
     gap:20px;
-  }
-
-  .ship{
-    width:250px;
-  }
-
-  .ship-left{
-    left:-250px;
-  }
-
-  .ship-right{
-    right:-250px;
   }
 
 }
@@ -192,6 +145,7 @@ body{
 
   <div class="header">
     <div class="logo">TRUSTIVA</div>
+
     <div class="nav">
       <a href="#">BROWSE</a>
       <a href="#">HOW IT WORKS</a>
@@ -204,16 +158,54 @@ body{
 
   <div class="hero-content">
     <div class="subheading">ACCESSING DIGITAL MARKETPLACE</div>
-    <h1>Buy & Sell Digital Businesses</h1>
-    <p>AI-powered marketplace for verified revenue-generating online assets.</p>
+
+    <h1 id="hero-title">
+      Buy & Sell Digital Businesses
+    </h1>
+
+    <div class="description">
+      AI-powered marketplace for verified revenue-generating online assets.
+    </div>
+
     <a href="#" class="cta">BROWSE LISTINGS</a>
   </div>
 
-  <!-- SHIPS -->
-  <img src="ship-left.png" class="ship ship-left">
-  <img src="ship-right.png" class="ship ship-right">
-
 </section>
+
+<script>
+
+/* ================= SCRAMBLE EFFECT ================= */
+
+document.addEventListener("DOMContentLoaded", function(){
+
+  const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
+  const el = document.getElementById("hero-title");
+  const originalText = el.innerText;
+  let iteration = 0;
+
+  const interval = setInterval(() => {
+
+    el.innerText = originalText
+      .split("")
+      .map((letter, index) => {
+        if(index < iteration){
+          return originalText[index];
+        }
+        return letters[Math.floor(Math.random() * letters.length)];
+      })
+      .join("");
+
+    if(iteration >= originalText.length){
+      clearInterval(interval);
+    }
+
+    iteration += 1/3;
+
+  }, 30);
+
+});
+
+</script>
 
 </body>
 </html>
