--- a/browse.html
+++ b/browse.html
@@ -2,122 +2,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Trustiva Market – Browse</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Trustiva Market | Browse</title>
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
+*{margin:0;padding:0;box-sizing:border-box;}
 
 body{
-  background:#0b0f1a;
+  background:#000;
   overflow:hidden;
   font-family:Inter, sans-serif;
 }
 
-#globe-container{
+/* Background */
+.background{
   position:fixed;
-  top:0;
-  left:0;
   width:100%;
   height:100vh;
-  z-index:1;
+  background:url("space.jpg") center/cover no-repeat;
+  z-index:-2;
 }
 
 .overlay{
+  position:fixed;
+  width:100%;
+  height:100vh;
+  background:linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.85));
+  z-index:-1;
+}
+
+#globe-container{
+  width:100%;
+  height:100vh;
+}
+
+.overlay-text{
   position:absolute;
   top:50%;
   left:50%;
   transform:translate(-50%,-50%);
   text-align:center;
   color:white;
-  z-index:2;
   pointer-events:none;
 }
 
-.overlay h1{
-  font-size:48px;
-  font-weight:600;
-  letter-spacing:1px;
+.overlay-text h1{
+  font-size:42px;
+  font-weight:300;
+  letter-spacing:2px;
+  margin-bottom:15px;
 }
 
-.overlay p{
-  margin-top:15px;
-  font-size:16px;
+.overlay-text p{
+  font-size:15px;
   opacity:0.8;
 }
 </style>
 </head>
+
 <body>
+
+<div class="background"></div>
+<div class="overlay"></div>
 
 <div id="globe-container"></div>
 
-<div class="overlay">
+<div class="overlay-text">
   <h1>Explore Verified Digital Businesses Globally</h1>
-  <p>Secure. Verified. Escrow-Protected.</p>
+  <p>Secure. Transparent. Escrow Protected.</p>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
 
 <script>
 let scene = new THREE.Scene();
+
 let camera = new THREE.PerspectiveCamera(
   60,
-  window.innerWidth/window.innerHeight,
+  window.innerWidth / window.innerHeight,
   0.1,
   1000
 );
 
-let renderer = new THREE.WebGLRenderer({antialias:true});
+let renderer = new THREE.WebGLRenderer({antialias:true, alpha:true});
 renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setPixelRatio(Math.min(window.devicePixelRatio, 1.5));
 document.getElementById("globe-container").appendChild(renderer.domElement);
 
 camera.position.z = 3;
 
+// Geometry
 let geometry = new THREE.SphereGeometry(1, 64, 64);
 
+// Texture
 let textureLoader = new THREE.TextureLoader();
-let earthTexture = textureLoader.load("assets/globe/earth-night.jpg");
+let earthTexture = textureLoader.load("earth-night.jpg");
 
+// Material
 let material = new THREE.MeshStandardMaterial({
   map: earthTexture,
-  roughness:1,
-  metalness:0
+  roughness: 1,
+  metalness: 0
 });
 
 let earth = new THREE.Mesh(geometry, material);
 scene.add(earth);
 
-// Subtle Lighting
-let light = new THREE.DirectionalLight(0xffffff, 0.8);
-light.position.set(5,3,5);
-scene.add(light);
+// Lighting
+let directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+directionalLight.position.set(5,3,5);
+scene.add(directionalLight);
 
-let ambient = new THREE.AmbientLight(0x222222);
-scene.add(ambient);
+let ambientLight = new THREE.AmbientLight(0x222222);
+scene.add(ambientLight);
 
-// Medium Auto Rotation
-let autoRotate = true;
+// Auto rotation
 let rotationSpeed = 0.0025;
 
-// Drag Control
+// Drag rotate
 let isDragging = false;
 let previousMousePosition = {x:0,y:0};
 
-renderer.domElement.addEventListener('mousedown', function(e){
+renderer.domElement.addEventListener("mousedown", function(e){
   isDragging = true;
 });
 
-renderer.domElement.addEventListener('mouseup', function(e){
+renderer.domElement.addEventListener("mouseup", function(e){
   isDragging = false;
 });
 
-renderer.domElement.addEventListener('mousemove', function(e){
+renderer.domElement.addEventListener("mousemove", function(e){
   if(isDragging){
     let deltaMove = {
       x: e.offsetX - previousMousePosition.x,
@@ -134,20 +149,17 @@ renderer.domElement.addEventListener('mousemove', function(e){
   };
 });
 
-// Touch Support
-renderer.domElement.addEventListener('touchmove', function(e){
-  e.preventDefault();
+// Touch support
+renderer.domElement.addEventListener("touchmove", function(e){
   let touch = e.touches[0];
   earth.rotation.y += 0.005;
 });
 
-// Animation Loop
+// Animate
 function animate(){
   requestAnimationFrame(animate);
 
-  if(autoRotate){
-    earth.rotation.y += rotationSpeed;
-  }
+  earth.rotation.y += rotationSpeed;
 
   renderer.render(scene, camera);
 }
@@ -155,8 +167,8 @@ function animate(){
 animate();
 
 // Resize
-window.addEventListener('resize', ()=>{
-  camera.aspect = window.innerWidth/window.innerHeight;
+window.addEventListener("resize", function(){
+  camera.aspect = window.innerWidth / window.innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize(window.innerWidth, window.innerHeight);
 });
